# aoc-2019

./: LICENSE  README.md  pyproject.toml  requirements.txt
aoc/: day_01.ipynb  day_02.ipynb  day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb  day_07.ipynb  day_08.ipynb  day_09.ipynb  day_10.ipynb  day_11.ipynb  day_12.ipynb  day_13.ipynb  day_14.ipynb  day_15.ipynb  day_16.ipynb  day_17.ipynb  utils.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_13.py
