[tool.poetry]
name = "aoc-2019"
version = "0.1.0"
description = "Advent of Code 2019"
authors = ["eferm <emanuel@eferm.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
ipynb = "^0.5.1"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
